@@ -32,6 +32,9 @@ New in v0.7.13 (2017/??/??)
 * Fix bug #1672540 with patch from Benoit Nadeau
   - Rename would fail to move par files when moving across filesystems.
   - Patch uses shutil.move() to do the rename instead.
+* Fixed bug #1265765 with patches from Matthias Larisch and Edgar Soldin
+  - SSH Paramiko backend now uses BufferedFile implementation to enable
+    collecting the entire list of files on the backend.
 
 
 New in v0.7.12 (2017/03/21)
